force-app/main/default/objects/CQ_AS_SQX_Student__c/fields/CQ_AS_Description__c.field-meta.xml
<CustomField>
    <fullName>CQ_AS_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>