force-app/main/default/objects/CQ_AS_SQX_Student__c/fields/CQ_AS_Grade__c.field-meta.xml
<CustomField>
    <fullName>CQ_AS_Grade__c</fullName>
    <label>Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>9th Grade</fullName>
            </value>
            <value>
                <fullName>10th Grade</fullName>
            </value>
            <value>
                <fullName>11th Grade</fullName>
            </value>
            <value>
                <fullName>12th Grade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>