force-app/main/default/objects/CQ_AS_SQX_Student__c/fields/CQ_AS_Joining_Date__c.field-meta.xml
<CustomField>
    <fullName>CQ_AS_Joining_Date__c</fullName>
    <label>Joining Date</label>
    <type>Date</type>
</CustomField>