force-app/main/default/objects/CQ_AS_SQX_Student__c/fields/CQ_AS_SQX_Teacher_Lookup__c.field-meta.xml
<CustomField>
    <fullName>CQ_AS_SQX_Teacher_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Teacher&apos;s Lookup</label>
    <referenceTo>CQ_AS_SQX_Teacher__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>